Removed the unnecessary test and repurposed one of the remaining tests

--- a/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/content_001.xhtml
@@ -1,16 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>MO playback switching XHTML content</title>
+    <title>MO playback switching XHTML content with two MO files</title>
 </head>
 <body>
-    <p>Test passes (i.e., the Reading System supports playback of two consecutive XHTML Media documents, using a common MO file) if</p>
+    <p>Test passes (i.e., the Reading System supports playback of two consecutive XHTML Media documents, each with an associated MO file) if</p>
     <ol>
-        <li>The next page is properly displayed as an XHTML content</li>
+        <li>The next (second) page is properly displayed as an XHTML content</li>
         <li>The Reading System provides the user with a way to turn text reading on</li>
-        <li>If turned on, the extract on the next page is read aloud by the Reading System</li>
-        <li>After the full paragraph is read, the content automatically switches to the next portion of the texts with two more paragraphs, 
-            while read aloud continues without interruption.
+        <li>If turned on, the extract on the second page is read aloud by the Reading System</li>
+        <li>After the full paragraph is read, the content automatically switches to the next portion of the text on the third page, 
+            while reading aloud continues without interruption.
         </li>
     </ol>
     <p>The Reading System may highlight the text being read with a green background with the text grayed out;
