--- a/tests/mol-support_xhtml-load-next/EPUB/mobydick_2.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/mobydick_2.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>MO playback switching XHTML content 2.</title>
+		<title>MO playback switching XHTML content with two MO files 2.</title>
         <link rel="stylesheet" href="highlights.css" />
     </head>
 	<body> 
