--- a/tests/mol-support_xhtml-load-next/EPUB/nav.xhtml
+++ b/tests/mol-support_xhtml-load-next/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>MO playback switching XHTML content</title>
+    <title>MO playback switching XHTML content with two MO files</title>
   </head>
   <body>
     <nav epub:type="toc">
