fixing some tests and adding 2 new tests

--- a/tests/css-epub-hyphens/EPUB/content_001.xhtml
+++ b/tests/css-epub-hyphens/EPUB/content_001.xhtml
@@ -17,7 +17,7 @@
 
     <p>1. This test passes if no hyphens appear within the following block of text.</p>
 
-    <p style="margin: 1em; -epub-hyphens: none;">The nineteenth century dislike of romanticism is the rage of Caliban not seeing his own face in a glass. The moral life of man forms part of the subject-matter of the artist, but the morality of art consists in the perfect use of an imperfect medium. No artist desires to prove anything. Even things that are true can be proved. No artist has ethical sympathies. An ethical sympathy in an artist is an unpardonable mannerism of style. No artist is ever morbid. </p>
+    <p style="margin: 1em; -epub-hyphens: none;">The nineteenth century dislike of romanticism is the rage of Caliban not seeing his own face in a glass. The moral life of man forms part of the subject matter of the artist, but the morality of art consists in the perfect use of an imperfect medium. No artist desires to prove anything. Even things that are true can be proved. No artist has ethical sympathies. An ethical sympathy in an artist is an unpardonable mannerism of style. No artist is ever morbid. </p>
 
     <p>2. This test passes if hyphens appear in the any of these words in the following block of text: artist, express, everything, language, instruments, virtue, materials, musician, feeling, surface, or symbol.</p>
 
