--- a/tests/css-epub-text-combine-horizontal/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-combine-horizontal/EPUB/content_001.xhtml
@@ -13,7 +13,7 @@
     
     <p>2. This test passes if the text below renders vertically with pairs of digits appearing in the space of a single character.</p>
 
-    <p style="margin: 1em; -epub-text-combine-horizontal: all; writing-mode: vertical-lr;">これはテストです101112。</p>
+    <p style="margin: 1em; writing-mode: vertical-lr;">これはテストです<span style="-epub-text-combine-horizontal: all;">10</span><span style="-epub-text-combine-horizontal: all;">11</span><span style="-epub-text-combine-horizontal: all;">12</span>。</p>
     
   </body>
 </html>
