--- a/tests/css-epub-word-break/EPUB/content_001.xhtml
+++ b/tests/css-epub-word-break/EPUB/content_001.xhtml
@@ -7,7 +7,7 @@
 
     <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
 
-    <p>1. This test passes if none of the words in the following block of text wrap to a new line mid-word.</p>
+    <p>1. This test passes if any word breaks to a new line in a logical spot, i.e. centre breaks to cen-tre.</p>
 
     <p style="margin: 1em; -epub-word-break: normal">The family of Dashwood had long been settled in Sussex. Their estate was large, and their residence was at Norland Park, in the centre of their property, where, for many generations, they had lived in so respectable a manner as to engage the general good opinion of their surrounding acquaintance.</p>
 
