--- a/tests/css-epub-text-align-last/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-align-last/EPUB/content_001.xhtml
@@ -7,6 +7,8 @@
 
     <p>Instructions: All conditions of this test book must pass for the feature to pass. If any test fails, mark this section as a fail in the implementation report.</p>
 
+    <p>NOTE: Turn off any alignment settings in the reading settings, or set to default.</p>
+
     <p>1. This test passes if the last line of the following text block is aligned to the left side of the page.</p>
 
     <p style="margin: 1em; -epub-text-align-last: auto;">Alice was beginning to get very tired of sitting by her sister on the bank, and of having nothing to do: once or twice she had peeped into the book her sister was reading, but it had no pictures or conversations in it, “and what is the use of a book,” thought Alice “without pictures or conversations?”</p>
