--- a/tests/css-epub-text-emphasis/EPUB/content_001.xhtml
+++ b/tests/css-epub-text-emphasis/EPUB/content_001.xhtml
@@ -42,7 +42,7 @@
 
     <p>6. This test passes if the letter "a" appears above the text below.</p>
 
-    <p class="test" style="margin: 1em; -epub-text-emphasis-style: a;">the tenth year of the siege. The priest being refused, and insolently</p>
+    <p class="test" style="margin: 1em; -epub-text-emphasis-style: 'a';">the tenth year of the siege. The priest being refused, and insolently</p>
 
     <p>7. This test passes if the emphasis marks appear as hollow dots over the text below.</p>
 
