--- a/tests/lay-rendition-flow-pre-pag/EPUB/content_003.xhtml
+++ b/tests/lay-rendition-flow-pre-pag/EPUB/content_003.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p3">
-    <p>This page should appear in it's own viewport.</p>
+    <p>This page should appear in its own viewport.</p>
   </body>
 </html>
