--- a/tests/lay-rendition-flow-pre-pag/EPUB/content_004.xhtml
+++ b/tests/lay-rendition-flow-pre-pag/EPUB/content_004.xhtml
@@ -5,7 +5,7 @@
   <body>
     <h1>rendition:flow with pre-paginated Content Test</h1>
 
-    <p>This test passes if the previous two pages render as fixed layout pages in their own viewport and require pagination.</p>
+    <p>This test passes if the previous two pages render as fixed layout pages in their own viewports and require pagination.</p>
 
     <p>End of test.</p>
 
