--- a/tests/lay-rendition-flow-pre-pag/EPUB/content_001.xhtml
+++ b/tests/lay-rendition-flow-pre-pag/EPUB/content_001.xhtml
@@ -3,7 +3,7 @@
     <title>rendition:flow pre-paginated</title>
   </head>
   <body>
-    <h1>rendition:flow with pre-paginated Content Test</h1>
+    <h1>rendition:flow with pre-paginated content</h1>
 
     <p>This test passes if the following two pages render as fixed layout pages in their own viewport and require pagination.</p>
 
