address comments, regenerate EPUB

--- a/tests/css-epub-writing-mode/EPUB/content_002.xhtml
+++ b/tests/css-epub-writing-mode/EPUB/content_002.xhtml
@@ -2,10 +2,10 @@
   <head>
     <title>EPUB CSS Writing Modes</title>
   </head>
-  <body>
+  <body style="-epub-writing-mode: vertical-rl;">
     <h1>-epub-writing-mode Tests</h1>
 
-    <p style="margin: 1em; -epub-writing-mode: vertical-rl">2. これはテストです。This test passes if this text renders vertically starting from the right-hand side of the page.</p>
+    <p style="margin: 1em;">2. これはテストです。This test passes if this text renders vertically starting from the right-hand side of the page.</p>
 
   </body>
 </html>
