--- a/tests/lay-viewport-meta-prop/EPUB/page_001.xhtml
+++ b/tests/lay-viewport-meta-prop/EPUB/page_001.xhtml
@@ -7,6 +7,6 @@
   <body id="p1">
   	<h1>viewport meta delarations</h1>
 
-    <p>This test passes if all 4 pages of this test book render with the same viewport size and scale.</p>
+    <p>This test passes if all 4 pages of this test book render with the same viewport size and scale, and the user can zoom in and out on the pages with no interference.</p>
   </body>
 </html>
