--- a/tests/lay-viewport-meta-prop/EPUB/page_003.xhtml
+++ b/tests/lay-viewport-meta-prop/EPUB/page_003.xhtml
@@ -1,12 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
     <title>viewport meta declarations</title>
-    <meta name="viewport" content="width=900, height=600" />
+    <meta name="viewport" content="width=900, height=600, user-scalable=no" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
   	<h1>viewport meta delarations</h1>
-    
-    <p>Page 3</p>
+
+    <p>Page 3. This page has <code>user-scaleable</code> set to no, but zoom should be possible.</p>
   </body>
 </html>
