--- a/tests/lay-fxl-svg-icb_multi/EPUB/page_001.xhtml
+++ b/tests/lay-fxl-svg-icb_multi/EPUB/page_001.xhtml
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
-  	<p>Test passes if you see green and no red on the next page but you do see a red band on the page after that.</p>
+  	<p>Test passes if you only see a solid (red) rectangle on the next page, but you see a band on the right with a repeated star-shaped pattern on the page after that.</p>
   </body>
 </html>
