mol section done

--- a/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
+++ b/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
@@ -9,10 +9,12 @@
         <p>Test passes (i.e., the Reading System implements Media Overlays on SVG content with associated styling) if</p>
 
         <ol>
-            <li>The Reading System provides the user with a way to turn text reading on</li>
-            <li>If turned on, the extract on the next (SVG) page is read aloud by the Reading System</li>
+            <li>The Reading System provides the user with a way to turn text reading on.</li>
+            <li>If turned on, the extract on the next (SVG) page is read aloud by the Reading System.</li>
         </ol>
-        <p>The Reading System may highlight the text being read with a green background with the text grayed out;
-            but this feature is not required for the test to pass.</p> 
+        <p>By default, the text appears on top of a light gray cross pattern. The Reading System may 
+            highlight the text being read by making the pattern disappear under the text 
+            being read. However, this feature is not required for the test to pass.
+        </p> 
     </body>
 </html>
