--- a/tests/lay-reflow-align-x-center/EPUB/content_001.xhtml
+++ b/tests/lay-reflow-align-x-center/EPUB/content_001.xhtml
@@ -7,7 +7,7 @@
 
     <p>This test passes if the following page appears centered in the viewport.</p>
 
-    <p>This test is not applicable to reading systems that do not support <code>rendition:align-x-center</code>. if this reading system does not support the property, mark it as "null".</p>
+    <p>This test is not applicable to reading systems that do not support <code>rendition:align-x-center</code>. If this reading system does not support the property, mark it as "null".</p>
 
     <p>NOTE: This test may be hard to validate on reading systems offering only single-column views or portrait-only display. If the reading system does offer multiple column view or multiple orientations, ensure both settings are set to a default setting.</p>
   </body>
