--- a/tests/lay-viewport-meta-prop/EPUB/page_003.xhtml
+++ b/tests/lay-viewport-meta-prop/EPUB/page_003.xhtml
@@ -7,6 +7,6 @@
   <body id="p3">
   	<h1>viewport meta delarations</h1>
 
-    <p>Page 3. This page has <code>user-scaleable</code> set to no, but zoom should be possible.</p>
+    <p>Page 3. This page has <code>user-scaleable</code> set to <code>no</code>, but zoom should be possible.</p>
   </body>
 </html>
