--- a/tests/lay-fxl-xhtml-icb/EPUB/page_001.xhtml
+++ b/tests/lay-fxl-xhtml-icb/EPUB/page_001.xhtml
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
-  	<div style="position: absolute; top: 0; left: 0; background-color: red; width: 1000px; height: 1000px"></div>
-  	<div style="position: absolute; top: 0; left: 0; background-color: green; width: 900px; height: 600px"></div>
-  	<p>Test passes if you see green and no red.</p>
+  	<div style="position: absolute; top: 0; left: 0; width: 1000px; height: 1000px" class="solid"></div>
+  	<div style="position: absolute; top: 0; left: 0; width: 900px; height: 600px" class="pattern"></div>
+  	<p>Test passes if you see only a grid patterned page and no solid (red).</p>
   </body>
 </html>
