--- a/tests/lay-fxl-xhtml-icb_multi/EPUB/page_002.xhtml
+++ b/tests/lay-fxl-xhtml-icb_multi/EPUB/page_002.xhtml
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
-  	<div style="position: absolute; top: 0; left: 0; background-color: red; width: 1000px; height: 1000px"></div>
-  	<div style="position: absolute; top: 0; left: 0; background-color: green; width: 900px; height: 600px"></div>
+  	<div style="position: absolute; top: 0; left: 0; width: 1000px; height: 1000px" class="solid"></div>
+  	<div style="position: absolute; top: 0; left: 0; width: 900px; height: 600px"   class="pattern"></div>
   </body>
 </html>
