--- a/tests/lay-fxl-xhtml-icb_units/EPUB/page_002.xhtml
+++ b/tests/lay-fxl-xhtml-icb_units/EPUB/page_002.xhtml
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
-  	<div style="position: absolute; top: 0; left: 0; background-color: red; width: 1000px; height: 600px"></div>
-  	<div style="position: absolute; top: 0; left: 0; background-color: green; width: 500px; height: 300px"></div>
+  	<div style="position: absolute; top: 0; left: 0; width: 1000px; height: 600px" class="solid"></div>
+  	<div style="position: absolute; top: 0; left: 0; width: 500px; height: 300px"  class="pattern"></div>
   	<p>Test passes if the first and the second pages look exactly the same.</p>
   </body>
 </html>
