Updated tests per PR #2453 on the specs

--- a/tests/lay-fxl-xhtml-icb_invalid_meta/EPUB/page_001.xhtml
+++ b/tests/lay-fxl-xhtml-icb_invalid_meta/EPUB/page_001.xhtml
@@ -1,12 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>FXL Viewport Crop 001</title>
+    <title>Invalid Meta — 1</title>
     <meta name="viewport" content="width=900, height=600" />
     <link rel="stylesheet" href="fixed.css" />
   </head>
   <body id="p1">
   	<div style="position: absolute; top: 0; left: 0; width: 1000px; height: 1000px" class="solid"></div>
   	<div style="position: absolute; top: 0; left: 0; width: 900px; height: 600px"   class="pattern"></div>
-  	<p>Test passes if you only see a grid pattern on white background on this page with no solid (red) rectangle on the right and bottom.</p>
+  	<p>Test passes if you only see a grid pattern on white background on this page with no solid (red) rectangle on the right and bottom. <em>The following page should look exactly the same.</em></p>
   </body>
 </html>
