--- a/tests/lay-reflow-align-x-center/EPUB/content_003.xhtml
+++ b/tests/lay-reflow-align-x-center/EPUB/content_003.xhtml
@@ -1,6 +1,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
     <title>align-x-center in reflow</title>
+    <style>
+      html {
+        -epub-writing-mode:vertical-rl;
+        writing-mode:vertical-rl;
+      }
+    </style>
   </head>
   <body>
     <h1>rendition:align-x-center in reflowable documents</h1>
