--- a/tests/nav-non-text_img_title/EPUB/content_001.xhtml
+++ b/tests/nav-non-text_img_title/EPUB/content_001.xhtml
@@ -9,5 +9,6 @@
       <li>Description of the Abbey of Sénanque</li>
     </ol>
     <p>pointing at this page and the next, respectively.</p>
+    <p>If the second item in the table of content is not a text, but a photo of the Abbey, the test result should be marked as "n/a" (i.e., non-applicable).</p>
   </body>
 </html>
