--- a/tests/css-epub-line-break/EPUB/content_001.xhtml
+++ b/tests/css-epub-line-break/EPUB/content_001.xhtml
@@ -3,12 +3,8 @@
     <title>EPUB CSS Line Break</title>
 
     <style>
-      p.test {
-        white-space: nowrap;
-      }
 
       p.wrapbox { 
-        width: 10em; 
         margin: 0.5em; 
         white-space: normal; 
         vertical-align: top; 
@@ -41,19 +37,19 @@
 
     <p>1. <code>-epub-line-break: auto;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p class="test wrapbox auto" lang="jp">auto:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+    <p class="wrapbox auto" lang="jp">auto:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
     <p>2. <code>-epub-line-break: loose;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p class="test wrapbox loose" lang="jp">loose:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+    <p class="wrapbox loose" lang="jp">loose:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
     <p>3. <code>-epub-line-break: normal;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p class="test wrapbox normal" lang="jp">normal:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+    <p class="wrapbox normal" lang="jp">normal:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
     <p>4. <code>-epub-line-break: strict;</code>: This test passes if the following block of text breaks to a new line at the end of the viewport, no text is outside of the viewport, and line breaks update when the font size or viewport size changes.</p>
 
-    <p class="test wrapbox strict" lang="jp">strict:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
+    <p class="wrapbox strict" lang="jp">strict:<br />そこは湖のほとりで木々が輝いていた。<br />その景色に、美しいなぁと思わずつぶやいた。</p>
 
     <!--Text examples borrowed from the MDN page on CSS line-break, which only applies to CJK characters.-->
     
