adding test results and fixing one test error

--- a/tests/css-epub-writing-mode/EPUB/content_003.xhtml
+++ b/tests/css-epub-writing-mode/EPUB/content_003.xhtml
@@ -5,7 +5,7 @@
   <body style="-epub-writing-mode: vertical-lr;">
     <h1>-epub-writing-mode Tests</h1>
 
-    <p style="margin: 1em;"">3. これはテストです。This test passes if this text renders vertically starting from the left-hand side of the page.</p>
+    <p style="margin: 1em;">3. これはテストです。This test passes if this text renders vertically starting from the left-hand side of the page.</p>
 
   </body>
 </html>
