--- a/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
+++ b/tests/mol-timing-synchronization_svg/EPUB/content_001.xhtml
@@ -3,6 +3,7 @@
 	<head>
         <meta charset="utf-8" />
 		<title>Basic media overlay test in SVG</title>
+        <link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 
