--- a/tests/pub-cmt-mp3/EPUB/content_001.xhtml
+++ b/tests/pub-cmt-mp3/EPUB/content_001.xhtml
@@ -4,6 +4,6 @@
   </head>
   <body>
     <p>Test passes if you can hear audio below.</p>
-    <audio controls="true" src="aud/001.mp3" type="audio/mpeg">Audio format is not supported.</audio>
+    <audio controls="controls" src="aud/001.mp3">Audio format is not supported.</audio>
   </body>
 </html>
