--- a/tests/pub-cmt-opus/EPUB/content_001.xhtml
+++ b/tests/pub-cmt-opus/EPUB/content_001.xhtml
@@ -4,6 +4,6 @@
   </head>
   <body>
     <p>Test passes if you can hear audio below.</p>
-    <audio controls="true" src="aud/001.opus" type="audio/opus">Audio format is not supported.</audio>
+    <audio controls="controls" src="aud/001.opus">Audio format is not supported.</audio>
   </body>
 </html>
