--- a/tests/mol-audio-no-clipend/EPUB/content_001.xhtml
+++ b/tests/mol-audio-no-clipend/EPUB/content_001.xhtml
@@ -14,7 +14,7 @@
     <p>
         The Reading System may highlight the text being read with a green background with the text grayed out;
         but this feature is not required for the test to pass. Note that, if highlighted,
-        the highlight may get out of sync with after the second sentence: the audio keeps playing while the highlight remains on the second sentence. This is a possible effect of the missing <code>clipEnd</code> for the second sentence.
+        the highlighting will stop at the third sentence while the audio keeps playing to the end of the paragraph. This is the effect of missing a <code>clipEnd</code> on the corresponding <code>par</code> element in the media overlay file.
     </p>
 </body>
 </html>
