Correct Windows file URL

--- a/tests/pub-file-urls/EPUB/content_001.xhtml
+++ b/tests/pub-file-urls/EPUB/content_001.xhtml
@@ -28,7 +28,7 @@
     <h2>Windows</h2>
 
     <h3>Text document</h3>
-    <iframe src="file://C:/Windows/setuplog.txt"></iframe>
+    <iframe src="file://C:/Windows/Logs/CBS/CBS.log"></iframe>
 
   </body>
 </html>
