Add URL indication for each iframe

--- a/tests/pub-file-urls/EPUB/content_001.xhtml
+++ b/tests/pub-file-urls/EPUB/content_001.xhtml
@@ -16,18 +16,21 @@
     <h2>Linux</h2>
 
     <h3>Text document</h3>
+    <p>Iframe referring to <code>"file:///var/log/lastlog"</code></p>
     <iframe src="file:///var/log/lastlog"></iframe>
 
 
     <h2>MacOS</h2>
 
     <h3>Text document</h3>
+    <p>Iframe referring to <code>"file:///var/log/system.log"</code></p>
     <iframe src="file:///var/log/system.log"></iframe>
 
 
     <h2>Windows</h2>
 
     <h3>Text document</h3>
+    <p>Iframe referring to <code>"file://C:/Windows/Logs/CBS/CBS.log"</code></p>
     <iframe src="file://C:/Windows/Logs/CBS/CBS.log"></iframe>
 
   </body>
