Apply suggestions from code review
Co-authored-by: Ivan Herman <ivan@ivan-herman.net>

--- a/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
+++ b/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
@@ -16,12 +16,12 @@
 
     <h4>Audio</h4>
     <p>Refers to <code>"https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"</code></p>
-    <audio controls="" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3">
+    <audio controls="" src="https://www.w3.org/2023/03/epub_tests_files/t-rex-roar.mp3">
     </audio>
 
     <h4>Video</h4>
     <p>Refers to <code>"https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"</code></p>
-    <video width="150" src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"></video>
+    <video width="150" src="https://www.w3.org/2023/03/epub_tests_files/flower.webm"></video>
 
     <h4>Stylesheet</h4>
     <p>Refers to <code>"https://www.w3.org/StyleSheets/TR/2021/W3C-CR"</code>.</p>
