Add test reports and fix punctuation in EPUB

--- a/tests/scr-support_origin_unique/EPUB/content_001.xhtml
+++ b/tests/scr-support_origin_unique/EPUB/content_001.xhtml
@@ -9,7 +9,7 @@
         <p id="no_scripting" style="display: block">This reading system does not support scripting, which is necessary for this test to run.</p>
 
         <div id="scripting" style="display:none">
-            <p>The test passes if the value below is different from the origin displayed by the EPUB publication of <code>src-support_origin</code></p>
+            <p>The test passes if the value below is different from the origin displayed by the EPUB publication of <code>src-support_origin</code>.</p>
             <dl>
                 <dt>Origin URL:</dt>
                 <dd id="origin"></dd>
