Apply suggestions from code review
Co-authored-by: Ivan Herman <ivan@ivan-herman.net>

--- a/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
+++ b/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
@@ -2,7 +2,7 @@
   <head>
     <title>Fetching of remote resources embedded by side-loaded EPUB publications requires consent</title>
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2021/W3C-CR"/>
-    <script src="!TODO"></script>
+    <script src="https://www.w3.org/2023/03/epub_tests_files/remote_scripting.js"></script>
   </head>
   <body>
     <p>Test passes if none of the following resources are loaded before the reader has given consent.</p>
