Small fix for network EPUB

--- a/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
+++ b/tests/sec-untrusted-consent_network/EPUB/content_001.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
     <title>Fetching of remote resources embedded by side-loaded EPUB publications requires consent</title>
-    <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2021/W3C-CR"/>
+    <link rel="stylesheet" href="!TODO"/>
     <script src="https://www.w3.org/2023/03/epub_tests_files/remote_scripting.js"></script>
   </head>
   <body>
@@ -26,9 +26,10 @@
 
     <h4>Stylesheet</h4>
     <p>Refers to <code>"https://www.w3.org/StyleSheets/TR/2021/W3C-CR"</code>.</p>
-    <p>Stylesheet is loaded if subtitles are bold.</p>
+    <p class="paint_red">Stylesheet is fetched if this text is red.</p>
 
     <h4>Script</h4>
+    <p>Refers to <code>https://www.w3.org/2023/03/epub_tests_files/remote_scripting.js</code></p>
     <p id="remote_scripting_support">The remote script is <strong>not</strong> fetched and executed.</p>
 
   </body>
