--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
 			</p>
 		</section>
 
-		<section data-include="fragments/tests.html" data-include-replace="true"></section>
+		<section data-include="generate/fragments/tests.html" data-include-replace="true"></section>
 		<section class="appendix" id="contributors">
 			<h2>Acknowledgements</h2>
 
 			<p>The following experts contributed to the test suite:</p>
 
-			<ul data-include="fragments/creators.html" data-include-replace="true"></ul>	
+			<ul data-include="generate/fragments/creators.html" data-include-replace="true"></ul>	
 		</section>
 
 		<script type="text/javascript">
